prepared for production